WebRoot/js/zimbraMail/config/style/zm.css
/* ... */
.MainShell {}





/* Dwt-created elements that have their ID set so we can tweak them specifically here */

/* MOVE TO SKIN ??? */
#ZmTagColorMenu {
	width: 100px;	/* ??? SIZE */
}



/*
 * Banner - shows username, quota bar
 *			(enlarges, turns green when angry)
 */


/* Outside container for the banner */
.BannerBar {}

.BannerBar .quotabar {
	@ProgressBarBg@
	width: 100px;
}

.BannerBar .quotaUsed {
	@ProgressBarInfo@
}

/* 65% - 85% of quota used */
.BannerBar .quotaWarning {
	@ProgressBarWarning@
}

/* 85%+ of quota used */
.BannerBar .quotaCritical {
	@ProgressBarCritical@
}


/* percent used label */
.BannerBar .percent {
	@FontSmaller@
	@ChromeText@
	@NoWrap@
}

.BannerBar td {
	padding-right: @BoxPaddingSize@;
}

/* ??? USED? */
.BannerBar img {
	border: none;
	margin-right: 2px;
}

/* Quota label */
.BannerBar .BannerText {
	@ChromeText@
	@NoWrap@
	text-align: center;
}

/* User label */
.BannerBar .BannerTextUser {
	@ChromeText@
	@NoWrap@
	text-align: center;
	font-weight: bold;

}




/* Status bar stuff */

.ZmStatusMainText {	
	@ToastText@
}

.ZmStatusToastText { 
	@ToastText@
}

.ZmStatusInfoToast {
	@ToastPane@
	@ToastInfo@
}
.ZmStatusWarningToast {	
	@ToastPane@
	@ToastWarning@
}
.ZmStatusCriticalToast {	
	@ToastPane@
	@ToastCritical@
}

.ZmStatusHistory { 
	width: 400px; 				/* ??? SIZE */
	height: 285px; 
	@BoxMargin@
	margin-bottom: 0px;
	overflow: auto;
}



/*
 *  Dwt Overrides
 */



/*
 *	Overview tree (list of folders)
 */


/* Override so first level of the tree does not indent */
/* ??? DO WE WANT THIS FOR ALL TREES, OR JUST IN THE OVERVIEW TREES */
.DwtTreeItemLevel1ChildDiv {
	padding-left:0px;
}



/*
 * Tool Bars
 */


/* ???? USED? */
.ZmToolBar {
	@FullWidth@
}

/* Search toolbar */
.ZmSearchToolbar {
	@FullSize@
}

/* Search builder toolbar (buttons only) */
.ZmBrowseToolBar {
	margin-top:-3px;
	@FullSize@
}

/* Main (horizontal) application toolbar */
.ZmAppToolBar {
	@FullSize@
}


/* Navigation portion of the main app toolbar -- arrows and count label */
.ZmNavToolBar {
	/*background-color: transparent;*/
}

/* toolbar in child window */
.ZmAppToolBar_cw {
	@ToolbarBg@
	@FullWidth@
}

/* toolbar in child window for message view */
.ZmMsgViewToolBar_cw {
	@ToolbarBg@
	@FullWidth@
}

/* toolbars in read message view that let you accept an appointment, share, etc */
.ZmInviteToolBar, .ZmShareToolBar {
	@ToolbarBg@
	padding-left:@BoxPaddingSize@
}


.ZmNavToolBar .DwtText {white-space: nowrap;}


/* ??? USE ? */
td.DDSepVisible div {
	background-color:black; 
	width:1px;
	overflow:hidden;
}
td.DDSepInvisible div {
	background-color:transparent;
	width:1px;
	overflow:hidden;
}



/* 
 * Search bar
 */

/* Search bar outer container */
.SearchPanel {	}


/* Search input field */
.search_input {
	@InputField@
	width:100%;
}



/* 
 * Search builder
 */

/* Search builder outer container */
.ZmBrowseView {
	height: 225px;		/* ??? SIZE */
	width: 100%;
	overflow: hidden;
}


/* 
 * Search builder "pickers" or panes 
 */

/* outer container for an individual picker */
.ZmPicker {
	@PickerBg@
}

/* Header for each picker */
.ZmPicker .DwtToolBar {
	@WidgetHeaderBg@
}

/* Name of the picker in the header */
.ZmPickerLabel .Text {
	@FontBig@
	font-weight:bold;
}

/* Container for the body of each picker */
.ZmPickerOverview {
	overflow: hidden;
}

/* ??? SHOTGUN */
.ZmPickerOverview td {
	 @Label@ 
}

.ZmPicker .DwtToolBar .TBButton {
	border-color:@_PageHeaderBgColor_@;
}




/*
 * Conversation view stuff
 */

/* message fragment text */
.ZmConvListFragment { 
	@Label@
	font-weight: normal; 
}
.Row-Selected .ZmConvListFragment { 
	@Label@
	font-weight: normal; 
}


/* Conversation view outer container (header, list and reading pane) */
.ZmConvView {}

/* Remove the border around the email conversation/message panes */
#ZmConvListView,
.ZmConvView .DwtListView,
.ZmTradView .DwtListView {
	border:0px;
}

 

/* ??? SHOTGUN */
.ZmConvView td { 
	@NoWrap@
}

/* Container for the header of this particular conversation */
.ZmConvView .SubjectBar {
	@PageHeaderBg@
	@BottomSeparator@
}

/* Label for the header of this conversation */
.ZmConvView .Subject {
	@Text@
	@FontBigger@
	@BoxPadding@
	@NoWrap@
	text-overflow: ellipsis;
}

.ZmConvView .Tags {
	vertical-align:bottom;
}

/* put space between display of tag icons and their names */
.Tags a { 
	@NoWrap@
	padding-right: @BoxPaddingSize@; 	/* ??? SIZE */
}



/* Container for the view of one particular message 
	-- there can be two instances, one for "conversation" view and one for "messages" view */
.ZmMailMsgView {
	@FullWidth@
	@ContentBg@
	@Text@
}

/* Container for the body of the message */
.MsgBody {
	@ContentBg@
	@Text@
}

/* ??? USE? */
.ZmMailMsgView .ZmToolBar {
	@ToolbarBg@
	margin-left: 12px;
	height: auto;
	width: auto;
}

/* Container for the header of the message */
.ZmMailMsgView .MsgHeader {
	padding-top:7px;
	@PageHeaderBg@
	@BottomSeparator@
}

.ZmMailMsgView .MsgHeader table {
	table-layout: fixed;
}

.ZmMailMsgView .MsgHeader .LabelColName {
	@NoWrap@
	@Label@		/* ??? bold?*/
	vertical-align: top;
	text-align: right;
	width:120px;		/* ??? SIZE */
}

.ZmMailMsgView .MsgHeader .LabelColValue {
	@Text@
	white-space: normal;
	vertical-align: top;
}

/* ??? USE? */
.ZmMailMsgView .AttName, 
.ZmMailMsgView .AttName-matched {
	padding-right: 8px;
}

/* ??? USE? */
.ZmMailMsgView .AttName-matched { 
	@MatchedText@
	white-space: nowrap; 
}

/* ??? USE? BUTTON?*/
.ZmMailMsgView .Displayimages {
	@NormalButton@
	@NormalButtonText@
}

.ZmMailMsgView .Displayimages td {
	@NormalButtonText@
}


/* ??? USE? */
.colButtons {
	width: 62px;
}

/* ??? USE? */
.hSpace {
	width: @BoxPaddingSize@;
}



/* Styles below apply to attachments table in iframe */
.iframeTable {
	table-layout: fixed;
}



/*
 * Message compose view 
 */ 
/* Outer container of message compose view */
.ZmComposeView {
	@PageBg@
	@FullWidth@
	@BoxPadding@
}

/* ??? SHOTGUN */
.ZmComposeView td {
	@Text@
}
/* ... */

